@@ -10,6 +10,7 @@
   <i18n:registerTranslations directory="locales" />
   
   <!-- Include the sub-packages that use their own configure.zcml files. -->
+  <include package=".adapters" />
   <include package=".browser" />
   <include package=".content" />
   <include package=".contentrules" />
